# gravl

./: .gitignore  CLAUDE.md  main.py  prefect.yaml  pyproject.toml
.claude/: memory  settings.json
.claude/agents/: auth-handler.md  browser-worker.md  code-generator.md  fixer.md  nuance-scout.md  page-analyst.md  portal-maintainer.md  python-tutor.md  senior-refactor-engineer.md  site-mapper.md  supervisor.md  web-researcher.md
.claude/hooks/: agent-tracker.sh  cleanup-screenshots.sh  pre-compact.sh  session-end.sh  session-start.sh  statusline-command.sh
.claude/skills/: build-portal  graphify  ingest  lint-vault
docs/: agent_envelope.md
scripts/: bootstrap_commands.toml  eshopbox_register_webhooks.py  init_postgres.sql  kb_bootstrap.py  onboard.py  product_card.html  product_strip.html  seed_from_sheet.py  seed_templates.py  shopify_oauth.py  test_shopify.py  wa_templates.py
src/gravl/: __init__.py
src/gravl/api/: main.py
src/gravl/api/webhooks/: cashfree.py  eshopbox.py  meta_whatsapp.py
src/gravl/common/: logging.py  s3.py
src/gravl/config/: integration_schemas.py
src/gravl/db/: __init__.py  adapter.py  credentials.py  sync_windows.py
src/gravl/integrations/cashfree/: client.py  pull.py
src/gravl/integrations/eshopbox/: client.py  pull.py
src/gravl/integrations/shopify/: client.py  pull.py
src/gravl/orchestration/: tracker.py
src/gravl/orchestration/flows/: cashfree_pull.py  eshopbox_pull.py  shopify_pull.py
src/gravl/whatsapp/: __init__.py  client.py  send.py  templates.py
